--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <title>Shop</title>
 </head>
 
-<body>
-
+<body id="first">
+  <br>
   <header id="header">
     <div class="bg"></div>
     <div class="time">
@@ -22,13 +22,14 @@
     <div class="social">
       <a href=""><img src="img/icons8-facebook-f-24.png" alt=""></a>
       <a href=""><img src="img/icons8-вконтакте-24.png" alt=""></a>
-      <a href=""><img src="img/icons8-instagram-24.png" alt=""></a>
+      <a href="https://www.instagram.com/byketi.by/"><img src="img/icons8-instagram-24.png" alt=""></a>
     </div>
     <div class="burger">
-      <a href="#" id="menu" class="icon1">&#9776</a>
+      <a href="#header" id="menu" class="icon1">&#9776</a>
+      <a href="#header" id="menu1" class="icon2">&#9776</a>
     </div>
     <div class="logo">
-      <img src="img/logo.png" alt="">
+      <a href="#first"><img src="img/logo.png" alt=""></a>
       <div class="line">
       </div>
     </div>
@@ -63,13 +64,16 @@
     </div>
     </div>
     <div class="navbar" id="top-nav">
-      <a href="#1">Каталог</a>
-      <a href="#2">Инста-витрина</a>
-      <a href="#3">Контакты</a>
-      <a href="#4">Доставка</a>
+      <div class="nav">
+        <a href="#1">Каталог</a>
+        <a href="#2">Инста-витрина</a>
+        <a href="#3">Контакты</a>
+        <a href="#4">Доставка</a>
+      </div>
     </div>
 
   </header>
+
   <div class="intro">
     <div class="video">
       <video class="video_media" src="video/videoplayback (online-video-cutter.com).mp4" autoplay muted loop></video>
@@ -123,7 +127,6 @@
     <div class="tabs_nav">
       <a class="tabs-nav-btn active" data-tab="#tab_01">Все букеты</a>
       <a class="tabs-nav-btn" data-tab="#tab_02">Авторские букеты</a>
-      <a class="tabs-nav-btn" data-tab="#tab_03">В шляпной коробке</a>
       <a class="tabs-nav-btn" data-tab="#tab_04">Свадебные букеты</a>
     </div>
     <div class="tabs_body">
@@ -258,19 +261,16 @@
 
   <footer id="3">
     <div class="footer">
-      <h3>Contacts:</h3>
-      <p>+7 (969) 041-44-44</p>
+      <h1>Контакты:</h1>
+      <p>+375 29 311 71 63</p>
       <br>
-      <p>bouquet.mscw@gmail.com</p>
-      <br>
-      <p>Ленинский проспект 12,</p>
-      <br>
-      <p>Москва</p>
-      <br>
-      <a href="">Политика конфиденциальности</a>
+      <a href="">ivlevaminsk@gmail.com</a>
       <br>
       <br>
-      <a href="">Наши реквизиты</a>
+      <p>Улица Щорса, 4А</p>
+      <br>
+      <p>Грушевка, Минск, Беларусь</p>
+
     </div>
     <div class="url">
       <a href=""><img src="img/icons8-вконтакте-24.png" alt=""></a>
