--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="form.css">
-  <link rel="stylesheet" href="sizes.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/form.css">
+  <link rel="stylesheet" href="css/sizes.css">
   <link type="image/x-icon" sizes="192x192" rel="icon" href="img/favicon.ico">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="slider.css">
 
   <title>Shop</title>
@@ -342,8 +342,8 @@
 
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-  <script src="app.js"></script>
-  <script src="form.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/form.js"></script>
   <!-- Подключаем jQuery -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <!-- Подключаем слайдер Slick -->
